# spectrum-analyser-firmware

./: CMakeLists.txt  README.md
components/lua/: CMakeLists.txt
components/u8g2/: CMakeLists.txt
components/u8g2_hal/: README.md
components/u8g2_hal/src/: u8g2_esp32_hal.c
components/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
main/: CMakeLists.txt  app.c  app.h  bitmaps.h  device_config.h  display.c  display.h  gui.c  gui.h  input.c  input.h  main.c  receiver.c  receiver.h
main/scripts/: scan.lua
