set(lua_src_dir "C:/lua/src")

set(srcs "${lua_src_dir}/lapi.c"
         "${lua_src_dir}/lauxlib.c"
         "${lua_src_dir}/lbaselib.c"
         "${lua_src_dir}/lcode.c"
         "${lua_src_dir}/lcorolib.c"
         "${lua_src_dir}/lctype.c"
         "${lua_src_dir}/ldblib.c"
         "${lua_src_dir}/ldebug.c"
         "${lua_src_dir}/ldo.c"
         "${lua_src_dir}/ldump.c"
         "${lua_src_dir}/lfunc.c"
         "${lua_src_dir}/lgc.c"
         "${lua_src_dir}/linit.c"
         "${lua_src_dir}/liolib.c"
         "${lua_src_dir}/llex.c"
         "${lua_src_dir}/lmathlib.c"
         "${lua_src_dir}/lmem.c"
         "${lua_src_dir}/loadlib.c"
         "${lua_src_dir}/lobject.c"
         "${lua_src_dir}/lopcodes.c"
         "${lua_src_dir}/loslib.c"
         "${lua_src_dir}/lparser.c"
         "${lua_src_dir}/lstate.c"
         "${lua_src_dir}/lstring.c"
         "${lua_src_dir}/lstrlib.c"
         "${lua_src_dir}/ltable.c"
         "${lua_src_dir}/ltablib.c"
         "${lua_src_dir}/ltm.c"
         "${lua_src_dir}/lundump.c"
         "${lua_src_dir}/lutf8lib.c"
         "${lua_src_dir}/lvm.c"
         "${lua_src_dir}/lzio.c")

idf_component_register(SRCS "${srcs}" INCLUDE_DIRS "${lua_src_dir}")